1.10
  - add show_ignore_space_change_link option to show --ignore-space-change page easily
  - add --ignore-space-change feature in diff page by using w= query string
    for example, http://some.com/kimoto/gitprep_t/commit/3cf14ade5e28ee0cd83b9a3b1e1c332aed66df53?w=
1.9.2
  - fix atom feed entry url bug
1.9.1
  - fix atom feed bug
1.9
  - add ssh_rep_url_base to cnahge or hide ssh URL user directory
  - add atom feed of commits page
    for example, http://somehost.com/kimoto/gitprep_t/commits/master.atom
1.8
  - support publick key authentication
1.7
  - allow . as project name.
  - add respository and user search page
1.6
  - fix bug that can't create collaborator more than one.
  - support time zone.
  - change markdown parser from Text::Markdown::Discount to Text::Markdown::Hoedown
    because we want to support fenced code syntax
    ```
    code
    ```
  - add encoding_suspects to support multiple encoding in blob, commit diff, and blame.
1.5
  - fix bug that git clone via http failed.
  - show readme file in sub directory.
1.4
  - fix markdown bugs (*em*, _em_)
  - default readme file is changed. README is changed to README.md
  - add private repository and collaborator feature
1.3
  - add README.md support
  - add submodule support
  - add Smart HTTP and basic authentication support
  - add Markdown format in normal file
1.2
  - add blame page
  - add blanch import feature
1.1
  - add import_rep script to import repositories.
1.0
  - first major release